# scheduler-model

./: .clang-uml  .gitignore  .gitmodules  CMakeLists.txt  clang-tidy-checks.txt  main.cpp
html/: common.js  graph.html  index.html  server.html
src/: CMakeLists.txt
src/includes/: Graph.h  Parameters.h  Server.h  Stats.h  System.h  Util.h
src/includes/nodes/: FilterNode.h  Node.h  SourceNode.h
src/includes/scheduler/: IScheduler.h  New.h  RoundRobin.h  SingleHost.h
src/sources/: Graph.cpp  Server.cpp  System.cpp
src/sources/nodes/: Node.cpp
src/sources/scheduler/: New.cpp  RoundRobin.cpp  SingleHost.cpp
